# night_owl_research_agent

./: .env.example  .gitignore  AGENT_STRUCTURE.md  CLAUDE.md  EXPERIMENT_LOG.md  README.md  design_principle.md  findings.md  launch.py  program.md  pyproject.toml  requirements.txt  research_contract.md  settings.json
.claude/agents/: citation-manager.md  gap-finder.md  geo-specialist.md  hypothesis-generator.md  orchestrator.md  paper-writer.md  peer-reviewer.md  synthesis-analyst.md
.claude/commands/: find-gaps.md  full-pipeline.md  geo-search.md  launcher.md  lit-review.md  orchestrate.md  review-draft.md  write-section.md
GeoBenchmark/: README.md  __init__.py  download_data.py  run_benchmark.py
GeoBenchmark/baselines/: __init__.py  gwr_baseline.py  mgwr_baseline.py  ols_baseline.py
GeoBenchmark/datasets/: README_DATASETS.md
GeoBenchmark/evaluation/: metrics.py  visualize.py
agents/: __init__.py  codex_worker.py  experiment_agent.py  geo_specialist.py  literature_agent.py  review_agent.py  writing_agent.py
archived/core/: config.py  paper_generator.py  token_optimizer.py
configs/: benchmark_only.yaml  codex_hybrid.yaml  default.yaml  full_auto.yaml
core/: __init__.py  code_executor.py  config.py  literature_manager.py  memory_manager.py  orchestrator.py  research_loop.py
geo_benchmark/: README.md  __init__.py  download_data.py  run_benchmark.py
geo_benchmark/baselines/: __init__.py  (+3 more)
mcp/: README_MCP.md  geo_mcp_server.py
memory/: MEMORY.md  approved_claims.md  gap-analysis.md  hypotheses.md  outline.md  synthesis-2026-04-01.md  synthesis-matrix.csv
outputs/: AUTO_REVIEW.md  REVIEW_STATE.json
skills/: spatial-methods.md
templates/: EXPERIMENT_LOG_TEMPLATE.md  EXPERIMENT_PLAN_TEMPLATE.md  FINDINGS_TEMPLATE.md  HANDOFF_TEMPLATE.json  IDEA_CANDIDATES_TEMPLATE.md  PAPER_PLAN_TEMPLATE.md  RESEARCH_CONTRACT_TEMPLATE.md  RESEARCH_PLAN_TEMPLATE.md
tools/: arxiv_fetch.py  semantic_scholar_fetch.py
(+74 files in other folders)
